updating composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "kyeates/selenium2php",
+    "minimum-stability": "dev",
     "autoload": {
         "psr-0": {
             "Selenium2php\\" : "src",
